- Added assign value 'wmb_weight' for blocks
- Fixed bug about RewriteRule in .htaccess for pico.(thx takahasi)
- Fixed bug about default display block is not displayed
- Fixed bug about mobile only block is not displayed
- Fixed bug about submenu is not displayed when mainmenu is not displayed
- Fixed bug about unsetting block in 'BlockSetting' action(thx hamaco)
- 'Wizin' updated from '0.61' to '0.69'
----------------------------------
[2009-12-01 Ver 0.50 -> 0.51]
- Modified block render process.
- Added constant for download 'ke-tai_list.csv'.(special thanks ke-tai.org!)
- Added css filter flag in admin.php?act=GeneralSetting.
- Added Gticket check into simple login action for security.
- Added host check for DNS Rebinding.
- 'Wizin' updated from '0.53' to '0.61'.
----------------------------------
[2009-10-03 Ver 0.44 -> 0.50]
- Fixed bug about block show-function exist check.
- Added function for disable cache with cell phone access.(thx aki1222 and GIJOE)
- Added external link confirm action.
- Added config item 'trust_ip' and 'session_lifetime'.
- Modified session check logic.
- Modiifed preload (divide function).
- 'Wizin' updated from '0.52' to '0.53'.
- 'WizXc' module updated from '0.30' to '0.31'.
----------------------------------
[2009-09-14 Ver 0.43 -> 0.44]
- Fixed bug about duplicate constant in english language file.
- Fixed bug about get block object with deleted block id.
- Fixed bug about get selected block data.
- 'Wizin' updated from '0.49' to '0.52'.
----------------------------------
[2009-08-11 Ver 0.42 -> 0.43]
- Fixed bug about visible default value on BlockSetting.
- Fixed bug about get block process twice when block has no contents.(thx masahiro)
- Fixed bug about infinite redirect when session timeout.
- Added xoopsform_dhtmltextarea template for mobile.
- Added css filter call.
- Modified (refactoring) filter logic.
- Modified theme override logic.
- Assign 'user' module config for template.